feat: Done register logic

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,2 +1,2 @@
-MONGO_URI=
-JWT_SECRET=
+MONGO_URI="mongodb+srv://fsjsfinal:MwscxTb9IJx7JQbx@maincluster.kik8jgy.mongodb.net/?retryWrites=true&w=majority&appName=maincluster"
+JWT_SECRET="belibesarrmt-59"
