--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "daisyui": "^5.0.28",
+    "jose": "^6.0.10",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "mongodb": "^6.16.0",
